--- a/app/src/main/res/layout/photo_list_item.xml
+++ b/app/src/main/res/layout/photo_list_item.xml
@@ -24,19 +24,6 @@
             android:paddingLeft="@dimen/feed_item_padding_left_right"
             android:paddingRight="@dimen/feed_item_padding_left_right" >
 
-            <!--<com.android.volley.toolbox.NetworkImageView-->
-                <!--android:id="@+id/profilePic"-->
-                <!--android:layout_width="@dimen/feed_item_profile_pic"-->
-                <!--android:layout_height="@dimen/feed_item_profile_pic"-->
-                <!--android:scaleType="fitCenter" >-->
-            <!--</com.android.volley.toolbox.NetworkImageView>-->
-
-            <!--<LinearLayout-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:orientation="vertical"-->
-                <!--android:paddingLeft="@dimen/feed_item_profile_info_padd" >-->
-
                 <TextView
                     android:id="@+id/textview_photo_praise"
                     android:layout_width="fill_parent"
@@ -74,28 +61,9 @@
             <!--</LinearLayout>-->
         </LinearLayout>
 
-        <!--<TextView-->
-            <!--android:id="@+id/txtStatusMsg"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:paddingBottom="5dp"-->
-            <!--android:paddingLeft="@dimen/feed_item_status_pad_left_right"-->
-            <!--android:paddingRight="@dimen/feed_item_status_pad_left_right"-->
-            <!--android:paddingTop="@dimen/feed_item_status_pad_top" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/txtUrl"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:linksClickable="true"-->
-            <!--android:paddingBottom="10dp"-->
-            <!--android:paddingLeft="@dimen/feed_item_status_pad_left_right"-->
-            <!--android:paddingRight="@dimen/feed_item_status_pad_left_right"-->
-            <!--android:textColorLink="@color/link" />-->
-
         <ImageView
             android:id="@+id/imageview_photo_home"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:scaleType="fitXY"
