--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -89,7 +89,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_update_profile"
+        android:id="@+id/button_upload_photo"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_gravity="center_horizontal"
